--- a/rsvp.html
+++ b/rsvp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Malanie Sweet 16 - RSVP</title>
+    <title>Alberta's 80th Birthday - RSVP</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -158,7 +158,7 @@
     </div>
 
     <div class="form-box">
-      <form method="Post" name="rsvp" netlify>
+      <form name="rsvp" method="POST" data-netlify="true">
         <div class="form-coming">
           <p class="form-header">Can you attend?</p>
           <input type="radio" name="coming" value="yes" checked />
